# my_arithmetic_tpuser

./: pyproject.toml
.github/workflows/: deployment.yml  gitlab_sync.yml  tests.yml
my_arithmetic_tpuser/: functions.py
tests/: tests_functions.py
